[project]
name = "qiita-auto-analizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.3.0",
    "langchain>=1.3.14",
    "langchain-openai>=1.4.0",
    "langgraph>=1.2.9",
    "matplotlib>=3.11.1",
    "pandas>=3.0.3",
]
